--- a/config/vim/filetype.toml
+++ b/config/vim/filetype.toml
@@ -1,4 +1,6 @@
-##### Go #####
+##############################
+###            Go          ###
+##############################
 [[plugins]]
 repo = 'fatih/vim-go'
 on_ft = 'go'
@@ -10,9 +12,10 @@ hook_add = '''
   let g:go_highlight_operators = 1
   let g:go_highlight_build_constraints = 1
 '''
-##############
 
-##### Ruby #####
+##############################
+###           Ruby         ###
+##############################
 [[plugins]]
 repo = 'vim-ruby/vim-ruby'
 on_ft = 'ruby'
@@ -20,46 +23,52 @@ on_ft = 'ruby'
 [[plugins]]
 repo = 'tpope/vim-rails'
 on_ft = 'ruby'
-################
 
-##### JavaScript #####
+##############################
+###        JavaScript      ###
+##############################
 [[plugins]]
 repo = 'pangloss/vim-javascript'
 on_ft = 'javascript'
-######################
 
-##### YAML #####
+##############################
+###          YAML          ###
+##############################
 [[plugins]]
 repo = 'stephpy/vim-yaml'
 on_ft = 'yaml'
-################
 
-##### Toml #####
+##############################
+###          TOML          ###
+##############################
 [[plugins]]
 repo = 'cespare/vim-toml'
 on_ft = 'toml'
-################
 
-##### HAML #####
+##############################
+###          HAML          ###
+##############################
 [[plugins]]
 repo = 'tpope/vim-haml'
 on_ft = 'haml'
-################
 
-##### JSON #####
+##############################
+###          JSON          ###
+##############################
 [[plugins]]
 repo = 'elzr/vim-json'
 on_ft = 'json'
-################
 
-##### Slim #####
+##############################
+###          Slim          ###
+##############################
 [[plugins]]
 repo = 'slim-template/vim-slim'
 on_ft = 'slim'
-################
 
-##### Dockerfile #####
+##############################
+###        Dockerfile      ###
+##############################
 [[plugins]]
 repo = 'ekalinin/Dockerfile.vim'
 on_ft = 'dockerfile'
-######################
