--- a/config/vim/plugins_lazy.toml
+++ b/config/vim/plugins_lazy.toml
@@ -10,10 +10,7 @@ nnoremap <silent> <Leader>dm :<C-u>Denite file_mru<CR>
 nnoremap <silent> <Leader>dy :<C-u>Denite neoyank<CR>
 nnoremap <silent> <Leader>dl :<C-u>Denite line<CR>
 nnoremap <silent> <Leader>dg :<C-u>Denite grep<CR>
-'''
-hook_post_source = '''
-call denite#custom#var('grep', 'command',
-\ ['ag', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
+call denite#custom#var('grep', 'command', ['ag', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
 call denite#custom#var('grep', 'default_opts', [])
 call denite#custom#var('grep', 'recursive_opts', [])
 call denite#custom#var('grep', 'separator', ['--'])
@@ -35,47 +32,23 @@ on_event = 'BufRead'
 repo = 'tsukkee/unite-tag'
 on_event = 'BufRead'
 
-##############################
-###      Auto Complete     ###
-##############################
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-if = "has('nvim')"
-if = 'has("python3")'
-on_i = 1
-hook_source = '''
-  let g:deoplete#enable_at_startup = 1
-  let g:deoplete#auto_complete_delay = 0
-  let g:deoplete#auto_complete_start_length = 1
-  let g:deoplete#enable_smart_case = 1
-  inoremap <silent><expr> <TAB> 
-  \  pumvisible() ? "\<C-n>" :
-  \  <SID>check_back_space() ? "\<TAB>" :
-  \  deoplete#manual_complete()
-  function s:check_back_space() abort "{{{
-    let col = col('.') - 1
-    return !col || getline('.')[col - 1] =~ '\s'
-  endfunction"}}}
-  inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<C-h>"
-  inoremap <expr><BS> deoplete#smart_close_popup()."\<C-h>"
-'''
 
-[[plugins]]
-repo = 'zchee/deoplete-go'
-build = 'make'
-on_ft = 'go'
-depends = 'deoplete.nvim'
-hook_add = '''
-  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
-  let g:deoplete#sources#go#package_dot = 1
-  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
-  let g:deoplete#sources#go#use_cache = 1
-  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
-  let g:deoplete#omni#input_patterns = {}
-  let g:deoplete#omni#input_patterns.ruby = ['[^. *\t]\.\w*', '[a-zA-Z_]\w*::']
-  let g:deoplete#omni#functions = {}
-  let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
-'''
+#[[plugins]]
+#repo = 'zchee/deoplete-go'
+#build = 'make'
+#on_ft = 'go'
+#depends = 'deoplete.nvim'
+#hook_add = '''
+#  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
+#  let g:deoplete#sources#go#package_dot = 1
+#  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
+#  let g:deoplete#sources#go#use_cache = 1
+#  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
+#  let g:deoplete#omni#input_patterns = {}
+#  let g:deoplete#omni#input_patterns.ruby = ['[^. *\t]\.\w*', '[a-zA-Z_]\w*::']
+#  let g:deoplete#omni#functions = {}
+#  let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
+#'''
 
 [[plugins]]
 repo = 'fishbullet/deoplete-ruby'
