--- a/config/vim/plugins.toml
+++ b/config/vim/plugins.toml
@@ -54,7 +54,8 @@ if = 'has("python3")'
 on_i = 1
 hook_source = '''
   let g:deoplete#enable_at_startup = 1
-  source g:config_home . '/vim/deoplete.rc.vim'
+  let s:deoplete_rc_file = g:config_home . '/vim/deoplete.rc.vim'
+  execute 'source' s:deoplete_rc_file
 '''
 
 
@@ -144,3 +145,13 @@ map /  <Plug>(incsearch-forward)
 map ?  <Plug>(incsearch-backward)
 map g/ <Plug>(incsearch-stay)
 '''
+
+##############################
+###    Context FileType    ###
+##############################
+[[plugins]]
+repo = 'Shougo/context_filetype.vim' 
+
+[[plugins]]
+repo = 'osyo-manga/vim-precious'
+depends = 'Shougo/context_filetype.vim'
