--- a/config/vim/plugins_lazy.toml
+++ b/config/vim/plugins_lazy.toml
@@ -10,6 +10,8 @@ nnoremap <silent> <Leader>dm :<C-u>Denite file_mru<CR>
 nnoremap <silent> <Leader>dy :<C-u>Denite neoyank<CR>
 nnoremap <silent> <Leader>dl :<C-u>Denite line<CR>
 nnoremap <silent> <Leader>dg :<C-u>Denite grep<CR>
+'''
+hook_post_source = '''
 call denite#custom#var('grep', 'command', ['ag', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
 call denite#custom#var('grep', 'default_opts', [])
 call denite#custom#var('grep', 'recursive_opts', [])
@@ -32,23 +34,25 @@ on_event = 'BufRead'
 repo = 'tsukkee/unite-tag'
 on_event = 'BufRead'
 
-
-#[[plugins]]
-#repo = 'zchee/deoplete-go'
-#build = 'make'
-#on_ft = 'go'
-#depends = 'deoplete.nvim'
-#hook_add = '''
-#  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
-#  let g:deoplete#sources#go#package_dot = 1
-#  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
-#  let g:deoplete#sources#go#use_cache = 1
-#  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
-#  let g:deoplete#omni#input_patterns = {}
-#  let g:deoplete#omni#input_patterns.ruby = ['[^. *\t]\.\w*', '[a-zA-Z_]\w*::']
-#  let g:deoplete#omni#functions = {}
-#  let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
-#'''
+##############################
+###       AutoComplete     ###
+##############################
+[[plugins]]
+repo = 'zchee/deoplete-go'
+build = 'make'
+on_ft = 'go'
+depends = 'deoplete.nvim'
+hook_add = '''
+  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
+  let g:deoplete#sources#go#package_dot = 1
+  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
+  let g:deoplete#sources#go#use_cache = 1
+  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
+  let g:deoplete#omni#input_patterns = {}
+  let g:deoplete#omni#input_patterns.ruby = ['[^. *\t]\.\w*', '[a-zA-Z_]\w*::']
+  let g:deoplete#omni#functions = {}
+  let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
+'''
 
 [[plugins]]
 repo = 'fishbullet/deoplete-ruby'
