--- a/config/vim/plugins.toml
+++ b/config/vim/plugins.toml
@@ -1,5 +1,5 @@
 ##############################
-###        Required       ####
+###     Plugin Manager    ####
 ##############################
 [[plugins]]
 repo = 'Shougo/dein.vim'
