--- a/config/vim/plugins_lazy.toml
+++ b/config/vim/plugins_lazy.toml
@@ -35,29 +35,10 @@ repo = 'tsukkee/unite-tag'
 on_event = 'BufRead'
 
 ##############################
-###       AutoComplete     ###
+###        Terminal        ###
 ##############################
-[[plugins]]
-repo = 'zchee/deoplete-go'
-build = 'make'
-on_ft = 'go'
-depends = 'deoplete.nvim'
-hook_add = '''
-  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
-  let g:deoplete#sources#go#package_dot = 1
-  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
-  let g:deoplete#sources#go#use_cache = 1
-  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
-  let g:deoplete#omni#input_patterns = {}
-  let g:deoplete#omni#input_patterns.ruby = ['[^. *\t]\.\w*', '[a-zA-Z_]\w*::']
-  let g:deoplete#omni#functions = {}
-  let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
-'''
-
-[[plugins]]
-repo = 'fishbullet/deoplete-ruby'
-on_ft = 'ruby'
-depends = 'deoplete.nvim'
+repo ='kassio/neoterm' 
+if = "has('nvim')"
 
 ##############################
 ###      Input support     ###
