--- a/config/vim/plugins_lazy.toml
+++ b/config/vim/plugins_lazy.toml
@@ -10,17 +10,23 @@ hook_add = '''
   nnoremap <silent> <Leader>dm :<C-u>Denite file_mru<CR>
   nnoremap <silent> <Leader>dy :<C-u>Denite neoyank<CR>
   nnoremap <silent> <Leader>dl :<C-u>Denite line<CR>
-  nnoremap <silent> <Leader>dg :<C-u>Denite grep<CR>
+  nnoremap <silent> <Leader>dg :<C-u>Denite grep -buffer-name=search-buffer-denite<CR>
+  nnoremap <silent> <Leader>dr :<C-u>Denite -resume -buffer-name=search-buffer-denite<CR>
+  nnoremap <silent> <Leader>dn :<C-u>Denite -resume -buffer-name=search-buffer-denite -select=+1 -immediately<CR>
+  nnoremap <silent> <Leader>dp :<C-u>Denite -resume -buffer-name=search-buffer-denite -select=-1 -immediately<CR>
 '''
 hook_post_source = '''
-call denite#custom#var('grep', 'command', ['ag', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
-call denite#custom#var('grep', 'default_opts', [])
-call denite#custom#var('grep', 'recursive_opts', [])
-call denite#custom#var('grep', 'separator', ['--'])
-call denite#custom#source('file_rec, grep', 'matcher', ['matcher_cpsm'])
-call denite#custom#map('_', '-', '<denite:do_action:split>')
-call denite#custom#map('_', '|', '<denite:do_action:vsplit>')
-call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
+  call denite#custom#var('grep', 'command', ['ag'])
+  call denite#custom#var('grep', 'default_opts',
+  \ ['-i', '--vimgrep'])
+  call denite#custom#var('grep', 'recursive_opts', [])
+  call denite#custom#var('grep', 'pattern_opt', [])
+  call denite#custom#var('grep', 'separator', ['--'])
+  call denite#custom#var('grep', 'final_opts', [])
+  call denite#custom#source('file_rec, grep', 'matcher', ['matcher_cpsm'])
+  call denite#custom#map('_', '-', '<denite:do_action:split>')
+  call denite#custom#map('_', '|', '<denite:do_action:vsplit>')
+  call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
 '''
 
 [[plugins]]
@@ -48,6 +54,40 @@ hook_source = '''
 [[plugins]]
 repo = 'cohama/lexima.vim'
 on_i = 1
+
+##############################
+###      Auto Complete     ###
+##############################
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
+if = "has('nvim')"
+if = 'has("python3")'
+on_i = 1
+hook_source = '''
+  let g:deoplete#enable_at_startup = 1
+  let s:deoplete_rc_file = g:config_home . '/vim/deoplete.rc.vim'
+  execute 'source' s:deoplete_rc_file
+'''
+
+[[plugins]]
+repo = 'zchee/deoplete-go'
+build = 'make'
+on_ft = 'go'
+depends = 'deoplete.nvim'
+hook_add = '''
+  let s:deoplete_go_rc_file = g:config_home . '/vim/deoplete-go.rc.vim'
+  execute 'source' s:deoplete_go_rc_file
+'''
+
+[[plugins]]
+repo = 'fishbullet/deoplete-ruby'
+on_ft = 'ruby'
+depends = 'deoplete.nvim'
+
+[[plugins]]
+repo = 'zchee/deoplete-zsh' 
+on_ft = 'zsh'
+depends = 'deoplete.nvim'
 
 ##############################
 ###         Matcher        ###
