--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -31,4 +31,7 @@ set -g @shell_mode 'vi'
 ##### Enable Mouse #####
 setw -g mouse
 
+##### Default shell #####
+set -g default-shell /usr/local/bin/zsh
+
 run '$XDG_DATA_HOME/tmux/plugins/tpm/tpm'
