--- a/config/peco/config.json
+++ b/config/peco/config.json
@@ -1,3 +1,11 @@
 {
-  "Prompt": ">"
+  "Prompt": ">",
+  "Style": {
+  },
+  "Keymap": {
+    "C-k": "peco.SelectUp",
+    "C-j": "peco.SelectDown",
+    "C-l": "peco.ForwardChar",
+    "C-h": "peco.BackwardChar"
+  }
 }
