--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -21,9 +21,16 @@ bind C-Space send-prefix
 unbind C-b
 
 ##### StatusLine #####
-set -g status-left '#{prefix_highlight}'
+set -g status-justify "centre"
+setw -g window-status-format " #I: #W "
+setw -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+set -g status-left '#{prefix_highlight}''Git: User[#(${XDG_DATA_HOME}/dotfiles/tmux/function/current_pane_git_user_info)]''Branch[#(${XDG_DATA_HOME}/dotfiles/tmux/function/current_pane_git_branch)]'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
+
+"#[fg=green]#(${HOME}/dotfiles/bin/git-echo-branch-tmux-current-pane)"\
+"#[fg=yellow]#(${HOME}/dotfiles/bin/git-echo-username-and-email)"\
+"#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 
 ##### Copy and Paste #####
 set -g @shell_mode 'vi'
@@ -34,4 +41,4 @@ setw -g mouse
 ##### Default shell #####
 set -g default-shell /usr/local/bin/zsh
 
-run '$XDG_DATA_HOME/tmux/plugins/tpm/tpm'
+run '$XDG_DATA_HOME/tpm/tpm'
