--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,8 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-copycat            \
   tmux-plugins/tmux-yank               \
 '
+##### plugins install dir #####
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '/${XDG_DATA_DIR}/tmux/plugins/'
 
 ##### Color #####
 set -g @colors-solarized 'dark'
