--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -12,7 +12,7 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-yank               \
 '
 ##### plugins install dir #####
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '/${XDG_DATA_DIR}/tmux/plugins/'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
 
 ##### Color #####
 set -g @colors-solarized 'dark'
@@ -43,4 +43,11 @@ setw -g mouse
 ##### Default shell #####
 set -g default-shell /usr/local/bin/zsh
 
-run '$XDG_DATA_HOME/tpm/tpm'
+##### Run powerline daemon #####
+set -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+run-shell 'powerline-daemon -q'
+source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
+##### Run tpm #####
+run-shell '$XDG_DATA_HOME/tpm/tpm'
