--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -25,7 +25,7 @@ unbind C-b
 ##### StatusLine #####
 set -g status-justify "centre"
 setw -g window-status-format " #I: #W "
-setw -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+setw -g window-status-current-format "#I: #W"
 set -g status-left '#{prefix_highlight}''Git: User[#(${XDG_DATA_HOME}/dotfiles/tmux/function/current_pane_git_user_info)]''Branch[#(${XDG_DATA_HOME}/dotfiles/tmux/function/current_pane_git_branch)]'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
