--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -10,6 +10,7 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-sidebar            \
   tmux-plugins/tmux-copycat            \
   tmux-plugins/tmux-yank               \
+  rabafea/tmux-git-branch              \
 '
 ##### plugins install dir #####
 set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
@@ -26,7 +27,7 @@ unbind C-b
 set -g status-justify "centre"
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
-set -g status-left '#{prefix_highlight}''Git: User[#(${XDG_DATA_HOME}/dotfiles/tmux/function/current_pane_git_user_info)]''Branch[#(${XDG_DATA_HOME}/dotfiles/tmux/function/current_pane_git_branch)]'
+set -g status-left '#{prefix_highlight} #{git_branch}'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
 
