--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-copycat            \
   tmux-plugins/tmux-yank               \
   rabafea/tmux-git-branch              \
+  rabafea/tmux-git-user                \
 '
 ##### plugins install dir #####
 set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
@@ -24,10 +25,11 @@ bind C-Space send-prefix
 unbind C-b
 
 ##### StatusLine #####
+set-option -g status-left-length 60
 set -g status-justify "centre"
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
-set -g status-left '#{prefix_highlight} #{git_branch}'
+set -g status-left '#{git_branch} #{prefix_highlight}'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
 
@@ -43,6 +45,9 @@ setw -g mouse
 
 ##### Default shell #####
 set -g default-shell /usr/local/bin/zsh
+
+#### Plugins config #####
+set -g @prefix_highlight_show_copy_mode 'on'
 
 ##### Run tpm #####
 run-shell '$XDG_DATA_HOME/tpm/tpm'
