--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -13,11 +13,11 @@ set -g @tpm_plugins '                  \
   rabafea/tmux-git-branch              \
   rabafea/tmux-git-user                \
 '
-##### plugins install dir #####
-set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
 
-##### Color #####
-set -g @colors-solarized 'dark'
+##### Plugins Configuration #####
+set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
+set-option -g @prefix_highlight_show_copy_mode 'on'
+set-option -g @colors-solarized 'dark'
 
 ##### Prefix #####
 set -g prefix C-Space
@@ -41,9 +41,6 @@ setw -g mouse
 
 ##### Default shell #####
 set -g default-shell /usr/local/bin/zsh
-
-#### Plugins config #####
-set -g @prefix_highlight_show_copy_mode 'on'
 
 ##### Run tpm #####
 run-shell '$XDG_DATA_HOME/tpm/tpm'
