--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -19,6 +19,9 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
 set-option -g @prefix_highlight_show_copy_mode 'on'
 set-option -g @colors-solarized 'dark'
 
+##### TrueColor #####
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 ##### Prefix #####
 set -g prefix C-Space
 bind C-Space send-prefix
