--- a/config/git/config
+++ b/config/git/config
@@ -2,17 +2,14 @@
 	editor = nvim
 	excludesfile = /Users/sakuraba/.gitignore_global
 	preloadindex = true
+[user]
+	useConfigOnly = true
 [color]
 	status = auto
 	diff = auto
 	branch = auto
 	interactive = auto
 	grep = auto
-[user]
-	name = sakuraba
-	email = sakuraba@tech.gr.jp
-[ghq]
-	root=~/Development/src
 [alias]
 	tree = log --graph --all --format='%x09%C(cyan bold)%an%Creset%x09%C(yellow)%h%Creset %C(magenta reverse)%d%Creset %s'
 	branches = branch -a
@@ -30,3 +27,5 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[ghq]
+	root=~/Development/src
