--- a/config/vim/filetype.toml
+++ b/config/vim/filetype.toml
@@ -26,9 +26,14 @@ on_ft = 'ruby'
 
 [[plugins]]
 repo = 'vim-utils/vim-ruby-fold'
+on_ft = 'ruby'
 hook_source = '''
-let g:ruby_fold_lines_limit = 100
+  let g:ruby_fold_lines_limit = 100
 '''
+
+[[plugins]]
+repo = 'todesking/ruby_hl_lvar.vim'
+on_ft = 'ruby'
 
 ##############################
 ###        JavaScript      ###
