--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -10,6 +10,7 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-sidebar            \
   tmux-plugins/tmux-copycat            \
   tmux-plugins/tmux-yank               \
+  tmux-plugins/tmux-logging            \
   rabafea/tmux-git-branch              \
   rabafea/tmux-git-user                \
 '
@@ -32,7 +33,7 @@ set-option -g status-left-length 60
 set -g status-justify "centre"
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
-set -g status-left '#{git_branch} #{prefix_highlight}'
+set -g status-left '#{git_user} #{prefix_highlight}'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
 
