--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -29,12 +29,13 @@ bind C-Space send-prefix
 unbind C-b
 
 ##### StatusLine #####
-set-option -g status-left-length 60
+set -g status-left-length 60
+set -g status-right-length 60
 set -g status-justify "centre"
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
-set -g status-left '#{git_user} #{prefix_highlight}'
-set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
+set -g status-left '[#{git_user}] #{prefix_highlight}'
+set -g status-right 'CPU:#{cpu_percentage} Battery:#{battery_percentage} #{battery_remain} | #H:#S'
 setw -g window-status-format '#P: #(shell command)'
 
 ##### Copy and Paste #####
