--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -13,6 +13,8 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-logging            \
   rabafea/tmux-git-branch              \
   rabafea/tmux-git-user                \
+  rabafea/tmux-volume-for-mac          \
+  rabafea/tmux-wifi-for-mac            \
 '
 
 ##### Plugins Configuration #####
@@ -29,13 +31,13 @@ bind C-Space send-prefix
 unbind C-b
 
 ##### StatusLine #####
-set -g status-left-length 60
-set -g status-right-length 60
+set -g status-left-length 120
+set -g status-right-length 120
 set -g status-justify "centre"
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
 set -g status-left '[#{git_user}] #{prefix_highlight}'
-set -g status-right 'CPU:#{cpu_percentage} Battery:#{battery_percentage} #{battery_remain} | #H:#S'
+set -g status-right '#{wifi_ssid_mac} CPU:#{cpu_percentage} Battery:#{battery_percentage} #{volume_mac} | #H:#S'
 setw -g window-status-format '#P: #(shell command)'
 
 ##### Copy and Paste #####
