--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -33,12 +33,15 @@ unbind C-b
 ##### StatusLine #####
 set -g status-left-length 120
 set -g status-right-length 120
-set -g status-justify "centre"
+set -g status-justify centre
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
-set -g status-left '[#{git_user}] #{prefix_highlight}'
-set -g status-right '#{wifi_ssid_mac} CPU:#{cpu_percentage} Battery:#{battery_percentage} #{volume_mac} | #H:#S'
+set -g status-left '#H:#S #{git_user} #{prefix_highlight}'
+set -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac} | #{wifi_strength_mac} ] #{volume_mac} [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
 setw -g window-status-format '#P: #(shell command)'
+setw -g monitor-activity on
+set -g visual-activity on
+set -g status-position top
 
 ##### Copy and Paste #####
 set -g @shell_mode 'vi'
