--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -28,6 +28,7 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 ##### Prefix #####
 set -g prefix C-Space
 bind C-Space send-prefix
+bind R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 unbind C-b
 
 ##### StatusLine #####
