--- a/config/vim/filetype.toml
+++ b/config/vim/filetype.toml
@@ -13,6 +13,10 @@ hook_add = '''
   let g:go_highlight_build_constraints = 1
 '''
 
+[[plugins]]
+repo = 'jodosha/vim-godebug'
+on_ft = 'go'
+
 ##############################
 ###           Ruby         ###
 ##############################
