--- a/config/vim/plugins.toml
+++ b/config/vim/plugins.toml
@@ -9,8 +9,22 @@ repo = 'Shougo/dein.vim'
 ##############################
 [[plugins]]
 repo = 'lifepillar/vim-solarized8'
+if = "$TERM == 'xterm-256color:Tc'"
 hook_add = '''
   colorscheme solarized8_dark
+'''
+
+[[plugins]]
+repo = 'altercation/vim-colors-solarized'
+if = "$TERM != 'xterm-256color:Tc'"
+hook_add = '''
+set background=dark
+let g:solarized_termtrans = 1
+let g:solarized_termcolors = 256
+augroup ColorScheme
+  autocmd!
+  au ColorScheme VimEnter * nested colorscheme solarized
+augroup END
 '''
 
 ##############################
@@ -81,26 +95,6 @@ depends = 'Shougo/context_filetype.vim'
 ##############################
 [[plugins]]
 repo = 'editorconfig/editorconfig-vim'
-
-##############################
-###        Web API         ###
-##############################
-[[plugins]]
-repo = 'mattn/webapi-vim'
-
-##############################
-###         Crowi          ###
-##############################
-[[plugins]]
-repo = 'b4b4r07/vim-crowi'
-hook_add = '''
-  let g:crowi#api_url = "https://private-wiki.herokuapp.com"
-  let g:crowi#access_token = "wqLAwdN1nGkWehS4svK0HLWQuq1Jiv5UfCTBnIjzAkM="
-  let g:crowi#filetypes = ['markdown']
-  let g:crowi#open_page = true
-  let g:crowi#default_create_path = '/user/sakuraba/memo'
-  let g:crowi#browser_command = 'open'
-'''
 
 ##############################
 ###    Syntax Highlight    ###
