--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ config/zsh/.zcompdump
 config/direnv
 config/gcloud
 config/fontforge
+config/fish/functions
+config/fish/completions
+config/fisherman
