--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -10,10 +10,11 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-copycat            \
   tmux-plugins/tmux-yank               \
   tmux-plugins/tmux-logging            \
-  rabafea/tmux-git-branch              \
-  rabafea/tmux-git-user                \
-  rabafea/tmux-volume-for-mac          \
-  rabafea/tmux-wifi-for-mac            \
+  raba-jp/tmux-git-branch              \
+  raba-jp/tmux-git-user                \
+  raba-jp/tmux-volume-for-mac          \
+  raba-jp/tmux-wifi-for-mac            \
+  raba-jp/tmux-extend-control          \
 '
 
 ##### Plugins Configuration #####
