--- a/config/nvim/visual.toml
+++ b/config/nvim/visual.toml
@@ -3,24 +3,24 @@ repo = 'lifepillar/vim-solarized8'
 if = "has('nvim')"
 depends = 'itchyny/lightline.vim'
 hook_add = '''
-  set background=dark
-  augroup ColorScheme
-    autocmd!
-    au ColorScheme VimEnter * nested colorscheme solarized8_dark
-  augroup END
+set background=dark
+augroup ColorScheme
+  autocmd!
+  au ColorScheme VimEnter * nested colorscheme solarized8_dark
+augroup END
 '''
 
 [[plugins]]
 repo = 'altercation/vim-colors-solarized'
 if = "!has('nvim')"
 hook_add = '''
-  set background=dark
-  let g:solarized_termtrans = 1
-  let g:solarized_termcolors = 256
-  augroup ColorScheme
-    autocmd!
-    au ColorScheme VimEnter * nested colorscheme solarized
-  augroup END
+set background=dark
+let g:solarized_termtrans = 1
+let g:solarized_termcolors = 256
+augroup ColorScheme
+  autocmd!
+  au ColorScheme VimEnter * nested colorscheme solarized
+augroup END
 '''
 
 [[plugins]]
@@ -29,10 +29,10 @@ hook_add = '''
 let g:lightline = {
 \ 'colorscheme': 'solarized',
 ""\ 'mode_map': {'c': 'NORMAL'},
-""\ 'active': {
-""\   'left': [['mode', 'paste', 'ale'], ['fugitive', 'filename']]
-""\ },
-""\ 'component_function': {
+\ 'active': {
+\   'left': [['mode', 'paste', 'ale'], []]
+\ },
+\ 'component_function': {
 ""\   'modified': 'LightLineModified',
 ""\   'readonly': 'LightLineReadOnly',
 ""\   'fugitive': 'LightLineFugitive',
@@ -41,8 +41,8 @@ let g:lightline = {
 ""\   'filetype': 'LightLineFiletype',
 ""\   'fileencoding': 'LightLineFileEncoding',
 ""\   'mode': 'LightLineMode',
-""\   'ale': 'LinterStatus'
-""\ }
+\   'ale': 'LinterStatus'
+\ }
 \}
 ""function! LightLineModified()
 ""  return &ft =~ 'help\|vimfiler\|gundo' ? '' : &modified ? '+' : &modifiable ? '' : '-'
@@ -85,16 +85,16 @@ let g:lightline = {
 ""  return winwidth(0) > 60 ? lightline#mode() : ''
 ""endfunction
 ""
-""function! LinterStatus() abort
-""    let l:counts = ale#statusline#Count(bufnr(''))
-""
-""    let l:all_errors = l:counts.error + l:counts.style_error
-""    let l:all_non_errors = l:counts.total - l:all_errors
-""
-""    return l:counts.total == 0 ? 'OK' : printf(
-""    \   '%dW %dE',
-""    \   all_non_errors,
-""    \   all_errors
-""    \)
-""endfunction
+function! LinterStatus() abort
+  let l:counts = ale#statusline#Count(bufnr(''))
+
+  let l:all_errors = l:counts.error + l:counts.style_error
+  let l:all_non_errors = l:counts.total - l:all_errors
+
+  return l:counts.total == 0 ? 'OK' : printf(
+  \   '%dW %dE',
+  \   all_non_errors,
+  \   all_errors
+  \)
+endfunction
 '''
