--- a/config/nvim/fuzzy_finder.toml
+++ b/config/nvim/fuzzy_finder.toml
@@ -20,6 +20,7 @@ call denite#custom#var('grep', 'final_opts', [])
 call denite#custom#map('_', "-", '<denite:do_action:split>')
 call denite#custom#map('_', "|", '<denite:do_action:vsplit>')
 call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
+call denite#custom#option('default', 'statusline', v:false)
 '''
 
 [[plugins]]
