--- a/config/nvim/visual.toml
+++ b/config/nvim/visual.toml
@@ -27,12 +27,19 @@ augroup END
 repo = 'itchyny/lightline.vim'
 hook_add = '''
 let g:lightline = {
-\ 'colorscheme': 'solarized',
-""\ 'mode_map': {'c': 'NORMAL'},
-\ 'active': {
-\   'left': [['mode', 'paste', 'ale'], []]
-\ },
-\ 'component_function': {
+      \ 'colorscheme': 'solarized',
+      \ 'mode_map': {'c': 'NORMAL'},
+      \ 'active': {
+      \   'left': [
+      \     ['mode', 'paste'],
+      \     ['filename', 'denite_source'],
+      \     ['linter']
+      \   ],
+      \   'right': [
+      \     ['lineinfo']
+      \   ]
+      \ },
+      \ 'component_function': {
 ""\   'modified': 'LightLineModified',
 ""\   'readonly': 'LightLineReadOnly',
 ""\   'fugitive': 'LightLineFugitive',
@@ -40,10 +47,12 @@ let g:lightline = {
 ""\   'fileformat': 'LightLineFileformat',
 ""\   'filetype': 'LightLineFiletype',
 ""\   'fileencoding': 'LightLineFileEncoding',
-""\   'mode': 'LightLineMode',
-\   'ale': 'LinterStatus'
-\ }
-\}
+      \   'mode': 'LightLineMode',
+      \   'linter': 'LightLineLinterStatus',
+      \   'denite_source': 'LightLineDeniteSource'
+      \   }
+      \ }
+
 ""function! LightLineModified()
 ""  return &ft =~ 'help\|vimfiler\|gundo' ? '' : &modified ? '+' : &modifiable ? '' : '-'
 ""endfunction
@@ -52,14 +61,11 @@ let g:lightline = {
 ""  return &ft !~? 'help\|vimfiler\|gundo' && &readonly ? 'x' : ''
 ""endfunction
 ""
-""function! LightLineFilename()
-""  return ('' != LightLineReadonly() ? LightLineReadonly() . ' ' : '') .
-""        \ (&ft == 'vimfiler' ? vimfiler#get_status_string() :
-""        \ &ft == 'unite' ? unite#get_status_string() :
-""        \ &ft == 'vimshell' ? vimshell#get_status_string() :
-""        \ '' != expand('%:t') ? expand('%:t') : '[No Name]') .
-""        \ ('' != LightLineModified() ? ' ' . LightLineModified() : '')
-""endfunction
+function! LightLineFilename()
+  return ('' != LightLineReadonly() ? LightLineReadonly() . ' ' : '') .
+        \ ('' != expand('%:t') ? expand('%:t') : '[No Name]') .
+        \ ('' != LightLineModified() ? ' ' . LightLineModified() : '')
+endfunction
 ""
 ""function! LightLineFugitive()
 ""  if &ft !~? 'vimfiler\|gundo' && exists('fugitive#head')
@@ -81,20 +87,29 @@ let g:lightline = {
 ""  return winwidth(0) > 70 ? (&fenc !=# '' ? &fenc : &enc) : ''
 ""endfunction
 ""
-""function! LightLineMode()
-""  return winwidth(0) > 60 ? lightline#mode() : ''
-""endfunction
-""
-function! LinterStatus() abort
+function! LightLineMode()
+  if &ft == 'denite'
+    let mode_str = substitute(denite#get_status_mode(), "-\\| ", "", "g")
+    call lightline#link(tolower(mode_str[0]))
+    return mode_str
+  endif
+
+  return winwidth(0) > 60 ? lightline#mode() : ''
+endfunction
+
+function! LightLineLinterStatus()
   let l:counts = ale#statusline#Count(bufnr(''))
 
   let l:all_errors = l:counts.error + l:counts.style_error
   let l:all_non_errors = l:counts.total - l:all_errors
 
-  return l:counts.total == 0 ? 'OK' : printf(
-  \   '%dW %dE',
-  \   all_non_errors,
-  \   all_errors
-  \)
+  return l:counts.total == 0 ? '' : printf('⨉ %d, ⚠ %d', all_non_errors, all_errors)
+endfunction
+
+function! LightLineDeniteSource()
+  return &ft == 'denite' ? denite#get_status_sources() : ''
+endfunction
+
+function! LightLineLineInfo()
 endfunction
 '''
